--- a/src/index.css
+++ b/src/index.css
@@ -3,13 +3,13 @@
 @tailwind utilities;
 
 :root {
-  --color-primary: #fff;
-  --color-bg: #4680ff;
+  --color-primary: #4680ff;
+  --color-bg: #fff;
   --color-text: #000000;
 }
 
 .dark {
-  --color-primary: #ff3b3b;
+  --color-primary: #fff;
   --color-bg: #000000;
   --color-text: #ffffff;
 }
@@ -22,7 +22,6 @@
     --card-foreground: 0 0% 3.9%;
     --popover: 0 0% 100%;
     --popover-foreground: 0 0% 3.9%;
-    --primary: 0 0% 9%;
     --primary-foreground: 0 0% 98%;
     --secondary: 0 0% 96.1%;
     --secondary-foreground: 0 0% 9%;
@@ -49,7 +48,6 @@
     --card-foreground: 0 0% 98%;
     --popover: 0 0% 3.9%;
     --popover-foreground: 0 0% 98%;
-    --primary: 0 0% 98%;
     --primary-foreground: 0 0% 9%;
     --secondary: 0 0% 14.9%;
     --secondary-foreground: 0 0% 98%;
