feat: Enhance video and event pages with dynamic data fetching and improved UI components
- Updated VideoPageContent to fetch video data from API and display loading state.
- Refactored VideosPageContent to retrieve top viewed and user listed videos from API.
- Modified routing for GuidedReading and Events pages to align with new structure.
- Implemented a comprehensive filtering system for videos with enhanced API support.
- Introduced new components for event hero slider and category tags to improve user experience.
- Added loader and error handling for asynchronous data fetching in various components.
- Updated GuidedReadingPageContent to include new sections and improved layout.

--- a/frontend/src/index.css
+++ b/frontend/src/index.css
@@ -225,16 +225,23 @@ ul .sub-item::before {
   animation-delay: 0.4s;
 }
 
-
 input {
   outline: none;
 }
 
 /* Hide scrollbar for free scroll tabs */
 .scrollbar-hide {
-  -ms-overflow-style: none;  /* Internet Explorer 10+ */
-  scrollbar-width: none;  /* Firefox */
+  -ms-overflow-style: none; /* Internet Explorer 10+ */
+  scrollbar-width: none; /* Firefox */
 }
-.scrollbar-hide::-webkit-scrollbar { 
-  display: none;  /* Safari and Chrome */
+.scrollbar-hide::-webkit-scrollbar {
+  display: none; /* Safari and Chrome */
+}
+input[type="number"] {
+  -moz-appearance: textfield;
+}
+input[type="number"]::-webkit-outer-spin-button,
+input[type="number"]::-webkit-inner-spin-button {
+  -webkit-appearance: none;
+  margin: 0;
 }
