--- a/frontend/src/index.css
+++ b/frontend/src/index.css
@@ -245,3 +245,6 @@ input[type="number"]::-webkit-inner-spin-button {
   -webkit-appearance: none;
   margin: 0;
 }
+.fast-pulse {
+  animation: pulse 0.9s ease-in-out infinite;
+}
